# BlueStack_Assignment_MTS

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: ArchScanner.cpp  ArchScanner.h  CMakeLists.txt  lib_arch_counter.cpp
app/src/main/java/com/example/myapplication/: App.kt  MainActivity.kt  NativeLib.kt
app/src/main/res/layout/: activity_main.xml
gradle/wrapper/: gradle-wrapper.properties
